# steam-workshop-download

./: README.md  build_error.txt  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: download.rs  mod.rs  system.rs
src-tauri/src/models/: download.rs  mod.rs  settings.rs
src-tauri/src/services/: downloader.rs  mod.rs  storage.rs
src/components/pages/: AboutPage.tsx  DownloaderPage.tsx  NetworkPage.tsx  SettingsPage.tsx
src/components/ui/: AccountSelector.tsx  ConsoleOutput.tsx  GameSelector.tsx  PathSelector.tsx  TitleBar.tsx  ToastContainer.tsx  WorkshopPreview.tsx
src/lib/: constants.ts  notifications.ts  tauri.ts
src/stores/: app-store.ts
